--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tejaswini-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://teju-l-g.github.io/tejaswini-portfolio",
+  "homepage": "https://teju-l-g.github.io/theju",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
